ignore binary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-nimcache/
-nimblecache/
-htmldocs/
+*/*
+!LICENSE
+!README.md
+!gemtext2html.nimble
+!src/**/*.nim
+!tests/**/*.nim
+!tests/**/*.nims
